--- a/src/components/FooterDate.css
+++ b/src/components/FooterDate.css
@@ -1,5 +1,5 @@
 .footer--date{
-    background-color:#ffff00;
+    background-color:#e9d16f;
     text-align: center;
     padding-top: 2em;
     width:100%;
