--- a/src/components/Insight.css
+++ b/src/components/Insight.css
@@ -1,12 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 .insight{
+    padding-bottom: 0;
     width:80%;
-    margin: 0 auto;
+    margin: 0 auto 0;
     padding-left: 0.8em;
     padding-top: 2em;
     height:20vh;
-    font-size:1.1rem;
+    line-height: 24px;
+    font-weight: 500;
+    font-style: normal;
+    font-family: poppins, serif;
+    font-size: 15px;
     text-align: center;
-    color:rgb(0, 26, 51);
+    color:#27415a;
 }
 
 @media(max-width:752px){
