--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -39,15 +39,14 @@
 
 }
 
-@media (max-width: 690px){
+@media(max-width:870px){
     .footer{
-        width:80%;
-        height:40vh;
-        background-color: rgb(0, 26, 51);;
-        color: rgba(255,255,255,0.65);
+        width:100%;
+        height:45vh;
         display: flex;
         flex-direction:column;
         justify-content: center;
+        /* margin-right:7em; */
         align-items: space-around;
     
         
@@ -58,9 +57,12 @@
         width: 27%;
         height:15vh;
         align-self: center;
-        margin-right: 7em;
+        margin-right: 20em;
+        margin-top:2em;
+        margin-bottom: 3em;
         
     }
+
 
     .footer--text{
         display: flex;
@@ -68,4 +70,136 @@
         margin-right:6em;
         
      }
+
+
+    .footer--title{
+        margin-bottom:2em;
+    }
+
+     .footer--description{
+        margin-bottom:1.5em;
+     }
+}
+
+@media(max-width:800px){
+    .footer{
+        width:100%;
+        height:40vh;
+        display: flex;
+        flex-direction:column;
+        justify-content: center;
+        align-items: space-around;
+    
+    }
+
+    .footer--logo{
+        object-fit: contain;
+        width: 15%;
+        height:12vh;
+        align-self: center;
+        margin-right: 20em;
+        margin-top:2em;
+        margin-bottom: 2em;
+    }
+
+    .footer--text{
+        display: flex;
+        justify-content:center;
+        align-self: flex-start;
+        margin-right:0em;
+        
+     }
+
+     .footer--title{
+        margin-bottom:0.8em;
+        margin-left: -3em;
+    }
+
+    .footer--description{
+        margin-bottom:1.3em;
+        margin-left: -3em;
+        font-size:0.9rem;
+     }
+}
+
+@media(max-width:700px){
+
+    .footer--logo{
+        object-fit: contain;
+        width: 15%;
+        height:11vh;
+        align-self: center;
+        margin-right: 23em;
+        margin-top:2em;
+        margin-bottom: 2em;
+    }
+
+    .footer--title{
+        margin-bottom:0.7em;
+        margin-left: -4em;
+    }
+
+    .footer--description{
+        margin-bottom:1.3em;
+        margin-left: -8em;
+        font-size:0.9rem;
+     }
+}
+
+@media(max-width:610px){
+
+    .footer--logo{
+        object-fit: contain;
+        width: 25%;
+        height:20vh;
+        align-self: center;
+        margin-right: 20em;
+        margin-top:2em;
+        margin-bottom: 1em;
+    }
+
+    .footer--title{
+        margin-bottom:0.9em;
+        margin-left: -1em;
+        font-size: 2em;
+    }
+    
+    .footer--description{
+       display: none;
+     }
+}
+
+@media(max-width:550px){
+    .footer--title{
+        margin-bottom:0.9em;
+        margin-left: -4em;
+        font-size: 1.5em;
+    }
+
+    .footer--description{
+        display: none;
+      }
+}
+
+@media(max-width:550px){
+
+    .footer--title{
+        margin-bottom:0.9em;
+        margin-left: -0.7em;
+        font-size: 1.5em;
+    }
+    .footer--description{
+        display: none;
+      }
+}
+
+@media(max-width:450px){
+    .footer--title{
+        margin-bottom:0.9em;
+        margin-left: -2.5em;
+        font-size: 1.5em;
+    }
+    .footer--description{
+        display: none;
+      }
 }
