--- a/src/components/FooterDate.css
+++ b/src/components/FooterDate.css
@@ -5,3 +5,39 @@
     width:100%;
     height:5vh;
 }
+
+@media(max-width:650px){
+    .footer--date{
+        padding-top: 1em;
+        padding-left: 2em;
+        width:100%;
+        height:5vh;
+    }
+}
+
+@media(max-width:540px){
+    .footer--date{
+        padding-top: 1em;
+        padding-left: 2em;
+        width:100%;
+        height:5vh;
+    }
+}
+
+@media(max-width:468px){
+    .footer--date{
+        padding-top: 1em;
+        padding-left: 3em;
+        width:100%;
+        height:5vh;
+    }
+}
+
+@media(max-width:412px){
+    .footer--date{
+        padding-top: 1em;
+        padding-left: 4em;
+        width:100%;
+        height:5vh;
+    }
+}
