--- a/src/components/FormPage.css
+++ b/src/components/FormPage.css
@@ -138,5 +138,68 @@
     font-weight: 700;
 }
 
+@media(max-width:870px){
 
 
+    .form {
+        max-width: 60%;
+    }
+
+    .form--input--icon{
+        width:68%;
+        font-size:1rem;
+    }
+
+    .form--input{
+        width: 100%;
+    }
+
+    .form--textarea{
+        max-width:70%;
+        min-width: 70%;
+        margin-top: 0.5em;
+        padding: 0.3em;
+        padding-left: 1.7em;
+        font-size:0.7rem;
+    }
+
+    .form--icon2{
+        font-size: 0.8rem;
+        top: 40.4em;
+        margin-right: 1em;
+    }
+
+    .form--textarea--text{
+        text-align: start;
+        font-size: 0.45rem;
+        font-weight: 700;
+    }
+
+    .form--header{
+        display: flex;
+        flex-direction:column;
+        justify-content:center;
+        align-items: center;
+       
+    }
+
+    .form--btn{
+        padding: 8px 16px; 
+        margin-left: 5.2em;
+        max-width:60%;
+        min-width:60%;
+    }
+
+    .form--btn--cancel{
+        padding: 8px 16px; 
+        margin-left: 5.2em;
+        padding: 8px 16px; 
+        margin-left: 5.2em;
+        max-width:60%;
+        min-width:60%;
+        
+    
+}
+
+
+}
