--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,12 +1,12 @@
 .header{
-    width:device-width;
+    width:100%;
     height:40vh;
     padding: 1.2em 0 0 10.5em;
-    background-color: rgb(0, 26, 51);
+    background-color: rgb(4, 30, 55);
 }
 
 .header--badge{
-    background-color:rgb(0, 26, 58);
+    background-color:rgb(10, 34, 59);
     width:40%;
     height: 16vh;
     padding: 2em;
@@ -27,12 +27,7 @@
     margin: 0.5em;
     text-transform:uppercase;
     
-    
 }
-
-/* .content--title{
-    background-color: fuchsia;
-} */
 
 .content--text{
     font-size:0.8rem
@@ -55,60 +50,88 @@
     
 }
 
-@media(max-width:752px){
+@media(max-width:870px){
 
     .header{
         /* width:device-width; */
-        width: 700px;
-        height:25vh;
+        width: 100%;
+        height:27vh;
+        padding: 2em 0em 0em 12.5em;
 
-     
     }
-
     
 
     .header--badge{
-        width:50%;
-        height: 9vh;
-        margin-right: 6em;
-        text-align: center;
-        border-left: none;
-        border-bottom: 9px solid #ffff00;
-        
+        width:30%;
+        height: 8vh;
+        padding-left: 4em; 
+        /* margin-right: 3px; */
+        border-left: 0 solid transparent;
+        border-bottom: 4px solid #ffff00;
         
     }
 
     .img--badge{
-        object-fit: contain;
         height: 5vh;
-        margin-right: 11em;
-        text-align: center;
+        margin-left: 5em;
+        /* margin-bottom: -3px; */
         /* width: 45%; */
         
     }
 
     .header--content{
         color: white;
-        margin: 0.05em;
+        margin: 0.09em;
         text-transform:uppercase;
         
     }
 
     .content--text{
-        font-size:0.7rem
+        margin-top: 7em;
+        text-align: center;
+        font-size:0.6rem
     }
 
     .content--title{
-    font-size: 1.5rem;
+    font-size: 1rem;
     } 
 
     .btn--header{
-        display: inline-block;
-        padding:15px 30px;
+        padding:12px 20px;
         font-weight:bold;
-        font-size:0.7rem;
-        margin-top: 1em;
+        font-size:0.8rem;
+        margin-top: 2em;
         border-radius: 50px;
+        transition: transform 200ms ease-in-out;
+    }
+}
+
+@media(max-width:420px){
+    .header--badge{
+        width:30%;
+        height: 8vh;
+        padding-left: 0.1em; 
+    
+      
+    }
+
+    .content--text{
+        margin-top: 4em;
+        text-align: center;
+        margin-bottom: 2em;
+        font-size:0.6rem
+    }
+
+    .img--badge{
+        height: 5vh;
+        margin-left: 2em;
         
+    }
+
+    .btn--header{
+        padding:10px 16px;
+        font-size:0.8rem;
+        margin-top: 3em;
+        margin-right: 5em;
     }
 }
