--- a/src/components/Row.css
+++ b/src/components/Row.css
@@ -2,7 +2,7 @@
     display:flex;
     justify-content: center;
     align-items: space-around;
-    background-color:rgb(0, 26, 51);
+    background-color:rgb(4, 30, 55);
     flex-wrap: wrap;
     overflow-y: hidden;
     flex-grow: 1;
@@ -60,24 +60,21 @@
    cursor: pointer;
 }
 
-@media(max-width:690px){
+@media(max-width:870px){
     .row--posters{
+        width:80%;
         display:flex;
         flex-direction:column;
-        justify-content: space-around;
+        justify-content: space-evenly;
         align-items: center;
-        background-color:rgb(0, 26, 51);
         flex-wrap: wrap;
-        flex-grow: 1;
-        margin:1.3em;
-        width:28%;
-        height: 45vh;
+        height: 35vh; 
     }
 
     .row--poster{
         display:flex;
         flex-direction:column;
-        justify-content:space-around;
+        justify-content:center;
         align-items:center;
         font-size: 0.6rem;
     
@@ -85,8 +82,10 @@
 
     .logo--img{
         object-fit: contain;
-        width:45%;
-        flex:0.1;
+        width:75%;
+        flex:0.3;
+        margin-top: -2em;
+        margin-bottom: 5em;
         /* justify-self: flex-start; */
     }
 
@@ -94,18 +93,23 @@
         flex:0.4;
         display: flex;
         flex-direction:column;
-        justify-content: space-around;
+        justify-content: center;
         align-items: center;
         text-transform: uppercase;
         color: white;
     }
 
+    .row--text{
+        margin-bottom:2em;
+        font-size:1.5em;
+    }
+
     .row--btn{
         display: inline-block;
-        padding: 7.5px 15px;
+        padding: 11.5px 25px;
         font-weight: bold;
         border-radius: 50px;
-        font-size:0.6rem;
+        font-size:0.9rem;
 
     }
 }
