--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -39,6 +39,51 @@
 
 }
 
+
+@media(max-width:912px){
+    .footer{
+        width:100%;
+        height:45vh;
+        display: flex;
+        flex-direction:column;
+        justify-content: center;
+        /* margin-right:7em; */
+        align-items: space-around;
+    
+        
+    }
+
+    .footer--logo{
+        object-fit: contain;
+        width: 27%;
+        height:15vh;
+        align-self: center;
+        margin-right: 20em;
+        margin-top:2em;
+        margin-bottom: 3em;
+        
+    }
+
+
+    .footer--text{
+        display: flex;
+        align-self: flex-start;
+        margin-right:6em;
+        
+     }
+
+
+    .footer--title{
+        margin-bottom:2em;
+    }
+
+     .footer--description{
+        margin-bottom:1.5em;
+     }
+}
+
+
+
 @media(max-width:870px){
     .footer{
         width:100%;
@@ -81,6 +126,47 @@
      }
 }
 
+@media(max-width:820px){
+    .footer{
+        width:100%;
+        height:40vh;
+        display: flex;
+        flex-direction:column;
+        justify-content: center;
+        align-items: space-around;
+    
+    }
+
+    .footer--logo{
+        object-fit: contain;
+        width: 15%;
+        height:12vh;
+        align-self: center;
+        margin-right: 20em;
+        margin-top:2em;
+        margin-bottom: 2em;
+    }
+
+    .footer--text{
+        display: flex;
+        justify-content:center;
+        align-self: flex-start;
+        margin-right:0em;
+        
+     }
+
+     .footer--title{
+        margin-bottom:1em;
+        margin-left: -0.4em;
+    }
+
+    .footer--description{
+        margin-bottom:1.3em;
+        margin-left: -3em;
+        font-size:1rem;
+     }
+}
+
 @media(max-width:800px){
     .footer{
         width:100%;
@@ -120,6 +206,53 @@
         margin-left: -3em;
         font-size:0.9rem;
      }
+}
+
+@media(max-width:712px){
+    .footer{
+        height:47vh;
+        padding: 0em 0 0 0em;
+        display: flex;
+
+        /* flex-direction:column; */
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .footer--logo{
+        object-fit: contain;
+        width: 20%;
+        height:20vh;
+        align-self: center;
+        /* justify-content:flex-start; */
+        margin-right: 0.2em;
+        margin-top:0.1em;
+        margin-bottom: 1em;
+    } 
+
+    .footer--text{
+        display: flex;
+        flex-direction: column;
+        justify-content:center;
+        align-items: center;
+        /* gap:0.8em; */
+     }
+
+     .footer--title{
+        /* margin-top: 0.5em; */
+        margin-bottom:1em;
+        margin-left: 2em;
+        font-size:3rem;
+    }
+
+    .footer--description{
+        margin: 0 auto;
+        width: 75%;
+        margin-top: 2em;
+        margin-bottom: 3em;
+        margin-left:10em;
+        font-size:0.9rem;
+    }
 }
 
 @media(max-width:700px){
@@ -165,20 +298,55 @@
     }
     
     .footer--description{
-       display: none;
+       /* display: none; */
      }
 }
 
-@media(max-width:550px){
-    .footer--title{
-        margin-bottom:0.9em;
-        margin-left: -4em;
-        font-size: 1.5em;
+@media(max-width:540px){
+    .footer{
+        width:100%;
+        height:47vh;
+        padding: 0em 0 0 0em;
+        display: flex;
+
+        /* flex-direction:column; */
+        justify-content: space-around;
+        align-items: center;
+    
+    } 
+
+    .footer--logo{
+        object-fit: contain;
+        width: 20%;
+        height:20vh;
+        align-self: center;
+        /* justify-content:flex-start; */
+        margin-right: 2em;
+        margin-top:0.9em;
+        margin-bottom: 1em;
+    } 
+
+    .footer--text{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        /* gap:0.8em; */
+     }
+
+     .footer--title{
+        font-size:2em;
+        margin-bottom:0.8em;
+        margin-left: -0.9em;
     }
 
     .footer--description{
-        display: none;
-      }
+        margin: 0 auto;
+        width: 65%;
+        margin-bottom: 0.8em;
+        font-size:0.8rem;
+    }
+
 }
 
 @media(max-width:550px){
@@ -189,7 +357,7 @@
         font-size: 1.5em;
     }
     .footer--description{
-        display: none;
+        /* display: none; */
       }
 }
 
@@ -200,6 +368,187 @@
         font-size: 1.5em;
     }
     .footer--description{
-        display: none;
+        /* display: none; */
       }
+}
+
+@media(max-width:414px){
+    .footer{
+        width:100%;
+        height:47vh;
+        padding: 0em 0 0 0em;
+        display: flex;
+
+        /* flex-direction:column; */
+        justify-content: space-around;
+        align-items: center;
+    
+    } 
+
+    .footer--logo{
+        object-fit: contain;
+        width: 20%;
+        height:20vh;
+        align-self: center;
+        /* justify-content:flex-start; */
+        margin-right: 0.3em;
+        margin-top:0.1em;
+        margin-bottom: 1em;
+    } 
+
+    .footer--text{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .footer--title{
+        margin-top: -5em;
+        margin-bottom:0.8em;
+        margin-left: -0.2em;
+    }
+
+    .footer--description{
+        margin: 0 auto;
+        width: 65%;
+        margin-bottom: 0.8em;
+        font-size:0.8rem;
+    }
+}
+
+@media(max-width:375px){
+    .footer{
+        width:100%;
+        height:47vh;
+        padding: 0em 0 0 0em;
+        display: flex;
+
+        /* flex-direction:column; */
+        justify-content: space-around;
+        align-items: center;
+    
+    } 
+
+    .footer--logo{
+        object-fit: contain;
+        width: 20%;
+        height:20vh;
+        align-self: center;
+        /* justify-content:flex-start; */
+        margin-right: 0.6em;
+        margin-top:0.9em;
+        margin-bottom: 1em;
+    } 
+
+    .footer--text{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        gap:0.8em;
+     }
+
+     .footer--title{
+        margin-bottom:0.8em;
+        margin-left: -0.9em;
+    }
+
+    .footer--description{
+        margin: 0 auto;
+        width: 65%;
+        margin-bottom: 0.8em;
+        font-size:0.8rem;
+    }
+}
+
+@media(max-width:360px){
+
+    .footer{
+        height:47vh;
+        padding: 0em 0 0 0em;
+        display: flex;
+
+        /* flex-direction:column; */
+        justify-content: space-around;
+        align-items: center;
+    
+    }
+
+    .footer--logo{
+        object-fit: contain;
+        width: 20%;
+        height:20vh;
+        align-self: center;
+        /* justify-content:flex-start; */
+        margin-right: 0.2em;
+        margin-top:0.1em;
+        margin-bottom: 6em;
+    } 
+
+    .footer--text{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        gap:0.8em;
+     }
+
+     .footer--title{
+        margin-bottom:0.8em;
+        margin-left: -0.9em;
+    }
+
+    .footer--description{
+        margin: 0 auto;
+        width: 65%;
+        margin-bottom: 0.8em;
+        font-size:0.8rem;
+    }
+}
+
+@media(max-width:280px){
+    .footer{
+        height:47vh;
+        padding: 0em 0 0 0em;
+        display: flex;
+
+        /* flex-direction:column; */
+        justify-content: space-around;
+        align-items: center;
+    
+    }
+
+    .footer--logo{
+        object-fit: contain;
+        width: 20%;
+        height:20vh;
+        align-self: center;
+        /* justify-content:flex-start; */
+        margin-right: 0.2em;
+        margin-top:0em;
+        margin-bottom: 9em;
+    } 
+
+    .footer--text{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        /* gap:2em; */
+     }
+
+     .footer--title{
+        margin-bottom:0.8em;
+        margin-bottom: 0em;
+        margin-left: -0.9em;
+    }
+
+    .footer--description{
+        margin: 0 auto;
+        width: 65%;
+        margin-top: 0.8em;
+        margin-bottom: 1em;
+        font-size:0.8rem;
+    }
 }
