--- a/src/components/FormPage.css
+++ b/src/components/FormPage.css
@@ -138,6 +138,128 @@
     font-weight: 700;
 }
 
+
+@media(max-width:1280px){
+    .form {
+        max-width: 80%;
+    } 
+
+    .form--icon2{
+        font-size: 0.8rem;
+        top: 35.4em;
+        margin-right: 1em;
+    }
+
+    .form--btn{
+        padding: 10px 28px; 
+        margin-left: 11em;
+        max-width:60%;
+        min-width:60%;
+    }
+
+    .form--btn--cancel{
+        margin-right: 5em;
+        padding: 5px 10px; 
+        max-width:20%; 
+        min-width:20%; 
+    }
+
+}
+
+@media(max-width:1024px){
+    .form {
+        max-width: 70%;
+    } 
+
+    .form--icon2{
+        font-size: 1rem;
+        top: 46.4em;
+        margin-right: 1em;
+    }
+
+    .form--btn{
+        padding: 10px 28px; 
+        margin-left: 8em;
+        max-width:60%;
+        min-width:60%;
+    }
+
+    .form--btn--cancel{
+        margin-left: 15em;
+        padding: 5px 10px; 
+        max-width:20%;
+        min-width:20%;
+    }
+}
+
+
+
+@media(max-width:912px){
+
+
+    .form {
+        max-width: 60%;
+    }
+
+    .form--input--icon{
+        width:68%;
+        font-size:1rem;
+    }
+
+    .form--input{
+        width: 100%;
+    }
+
+    .form--textarea{
+        max-width:70%;
+        min-width: 70%;
+        margin-top: 0.5em;
+        padding: 0.3em;
+        padding-left: 1.7em;
+        font-size:0.7rem;
+    }
+
+    .form--icon2{
+        font-size: 0.8rem;
+        top: 59.4em;
+        margin-right: 1em;
+    }
+
+    .form--textarea--text{
+        text-align: start;
+        font-size: 0.45rem;
+        font-weight: 700;
+    }
+
+    .form--header{
+        display: flex;
+        flex-direction:column;
+        justify-content:center;
+        align-items: center;
+       
+    }
+
+    .form--btn{
+        padding: 8px 16px; 
+        margin-left: 5.2em;
+        max-width:60%;
+        min-width:60%;
+    }
+
+    .form--btn--cancel{
+        padding: 8px 16px; 
+        margin-left: 5.2em;
+        padding: 8px 16px; 
+        margin-left: 5.2em;
+        max-width:60%;
+        min-width:60%;
+        
+    
+}
+
+}
+
+
 @media(max-width:870px){
 
 
@@ -201,5 +323,165 @@
     
 }
 
-
 }
+
+@media(max-width:820px){
+
+    .form {
+        max-width: 100%;
+    }
+
+    .form--icon2{
+        font-size: 0.8rem;
+        top: 51.3em;
+        margin-right: 1em;
+    }  
+}
+
+@media(max-width:768px){
+
+    .form--icon2{
+        font-size: 0.8rem;
+        top: 45.2em;
+        margin-right: 1em;
+    } 
+}
+
+@media(max-width:712px){
+    .form {
+        max-width: 100%;
+    }
+
+    .form--icon2{
+        font-size: 0.8rem;
+        top: 49.3em;
+        margin-right: 1em;
+    }
+}
+
+@media(max-width:414px){
+    .form--icon2{
+        font-size: 0.8rem;
+        top: 39.5em;
+        margin-right: 1em;
+    } 
+}
+
+@media(max-width:412px){
+    .form--icon2{
+        font-size: 0.8rem;
+        top: 40.5em;
+        margin-right: 1em;
+        
+    } 
+}
+
+@media(max-width:411px){
+    .form--icon2{
+        font-size: 0.8rem;
+        top: 32.8em;
+        margin-right: 1em;
+        
+    } 
+}
+
+@media(max-width:414px){
+    .form--icon2{
+        font-size: 0.8rem;
+        top: 32.99em;
+        margin-right: 1em;
+        
+    } 
+}
+
+@media(max-width:393px){
+    .form--icon2{
+        font-size: 0.8rem;
+        top: 37.9em;
+        margin-right: 1em;
+    } 
+}
+
+@media(max-width:390px){
+    .form {
+        max-width: 90%;
+    }
+
+    .form--icon2{
+        font-size: 0.8rem;
+        top: 37.5em;
+        margin-right: 1em;
+    } 
+}
+
+@media(max-width:375px){
+    .form {
+        max-width: 75%;
+    }
+
+    .form--icon2{
+        font-size: 0.8rem;
+        top: 30.1em;
+        margin-right: 1em;
+    }
+}
+
+@media(max-width:360px){
+
+    .form--icon2{
+        font-size: 0.8rem;
+        top: 28.9em;
+        margin-right: 1em;
+    }
+
+    .form--btn{
+        padding: 10px 28px; 
+        margin-left: 5em;
+        max-width:60%;
+        min-width:60%;
+    }
+    
+    .form--btn--cancel{
+        padding: 8px 16px; 
+        margin-left: 5.2em;
+        padding: 8px 16px; 
+        margin-left: 5.2em;
+        max-width:60%;
+        min-width:60%;
+        
+    }
+}
+
+@media(max-width:320px){
+    .form {
+        max-width: 90%;
+    }
+
+    .form--icon2{
+        font-size: 0.8rem;
+        top: 28.99em;
+        margin-right: 1em;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
