--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -50,6 +50,73 @@
     
 }
 
+@media(max-width:1024px){
+    .header{
+        width:100%;
+        height:60vh;
+        padding: 0em 0 0 0em;
+    }
+    
+    .header--badge{
+        width:70%;
+        height: 20vh;
+        padding-top: 6em;
+        margin-left: 5em;
+        padding-left: 2em;
+        border-left: 6px solid #ffff00;
+    }
+
+    .content--text{
+        font-size:1rem
+    }
+
+    .btn--header{
+        display: inline-block;
+        padding:15px 30px;
+        font-weight:bold;
+        font-size:1rem;
+        margin-top: 0.4em;
+        margin-left:6em;
+        border-radius: 50px;
+        transition: transform 200ms ease-in-out;
+        
+    } 
+}
+
+@media(max-width:912px){
+    .header{
+        width:100%;
+        height:40vh;
+        padding: 0em 0 0 0em;
+    }
+    
+    .header--badge{
+        background-color:rgb(10, 34, 59);
+        width:70%;
+        height: 20vh;
+        padding-top: 6em;
+        margin-left: 5em;
+        padding-left: 2em;
+        border-left: 6px solid #ffff00;
+    }
+
+    .content--text{
+        font-size:1rem
+    }
+
+    .btn--header{
+        display: inline-block;
+        padding:20px 40px;
+        font-weight:bold;
+        font-size:1rem;
+        margin-top: 2em;
+        margin-left:6em;
+        border-radius: 50px;
+        transition: transform 200ms ease-in-out;
+        
+    }
+}
+
 @media(max-width:870px){
 
     .header{
@@ -106,7 +173,149 @@
     }
 }
 
-@media(max-width:420px){
+/* @media(max-width:870px){
+    .header{
+        width: 100%;
+        height:27vh;
+        padding: 2em 0em 0em 12.5em;
+    }
+} */
+
+@media(max-width:820px){
+    .header{
+        height:25vh;
+        padding: 0px;
+    }
+
+    .header--badge{
+        width:55%;
+        height: 8vh;
+        margin: 0 auto;
+        padding: 2em;
+        border-left: none;
+    }
+
+    .img--badge{
+        object-fit: contain;
+        height: 5vh;
+        margin-left: 12em;
+    }
+
+    .content--title{
+        font-size:1.5rem;
+        text-align: center;
+    }
+
+    .content--text{
+        font-size:1rem;
+        margin-top: 3em;
+    }
+
+    .btn--header{
+        display: inline-block;
+        padding:18px 30px;
+        font-size:0.9rem;
+        margin-left: 24em;
+        margin-top: 4em;
+    }
+}
+
+@media(max-width:768px){
+
+    .header{
+        height:30vh;
+        padding: 0px;
+    }
+
+    .btn--header{
+        display: inline-block;
+        padding:18px 30px;
+        font-size:0.9rem;
+        margin-left: 22em;
+        margin-top: 4em;
+    }
+}
+
+@media(max-width:712px){
+    .header{
+        height:30vh;
+        padding: 0px;
+        margin-top: 0em;
+    }
+
+    .header--badge{
+        width:55%;
+        height: 12vh;
+        margin: 0 auto;
+        padding: 2em;
+        border-left: none;
+    }
+
+    .img--badge{
+        object-fit: contain;
+        height: 5vh;
+        margin-left: 10em;
+    }
+
+    .content--text{
+        font-size:1em;
+        margin-top:2.7em;
+    }
+
+    .btn--header{
+        display: inline-block;
+        padding:15px 30px;
+        font-weight:bold;
+        font-size:0.8rem;
+        margin-top: 3em;
+        margin-left: 23em;
+        border-radius: 50px;
+        transition: transform 200ms ease-in-out;
+        
+    }
+}
+
+@media(max-width:540px){
+
+    .header{
+        width:100%;
+        height:30vh;
+        padding: 0em 0 0 0em;
+     
+    }
+    .header--badge{
+        width:55%;
+        height: 8vh;
+        margin-left: 4em;
+        padding: 2em;
+        border-left: none;
+    }
+
+    .img--badge{
+        object-fit: contain;
+        height: 5vh;
+        margin-left: 0.4em;
+    }
+
+    .content--title{
+        font-size:0.9rem;
+    }
+
+    .content--text{
+        font-size:0.8em;
+        margin-top:3em;
+    }
+
+    .btn--header{
+        display: inline-block;
+        padding:10px 20px;
+        font-size:0.6rem;
+        margin-top: 4em;
+        margin-left: 20em;
+    }
+}
+
+/* @media(max-width:420px){
     .header--badge{
         width:30%;
         height: 8vh;
@@ -133,5 +342,166 @@
         font-size:0.8rem;
         margin-top: 3em;
         margin-right: 5em;
+    }
+} */
+
+@media(max-width:414px){
+    .header--badge{
+        width:55%;
+        height: 8vh;
+        margin: 0 auto;
+        padding: 2em;
+        border-left: none;
+    }
+
+    .img--badge{
+        object-fit: contain;
+        height: 5vh;
+        margin-left: 0.4em;
+    }
+
+    .btn--header{
+        display: inline-block;
+        padding:10px 20px;
+        font-size:0.6rem;
+        margin-top: 3em;
+        margin-left: 17em;
+    }
+}
+
+@media(max-width:393px){
+    .content--text{
+        font-size:0.5rem;
+        margin-top: 1.5em;
+    }
+
+    .btn--header{
+        display: inline-block;
+        padding:10px 20px;
+        font-size:0.6rem;
+        margin-top: 3em;
+        margin-left: 16em;
+    }
+}
+
+@media(max-width:390px){
+    .content--text{
+        font-size:.5rem;
+        margin-top: 1.5em;
+    }
+
+    .btn--header{
+        display: inline-block;
+        padding:10px 20px;
+        font-size:0.6rem;
+        margin-top: 3em;
+        margin-left: 16em;
+    }
+}
+
+@media(max-width:375px){
+    .header{
+        height:30vh;
+        padding: 0px;
+    } 
+
+    .header--badge{
+        width:55%;
+        height: 8vh;
+        margin: 0 auto;
+        padding: 2em;
+        border-left: none;
+    }
+
+    .img--badge{
+        object-fit: contain;
+        height: 5vh;
+        margin-left: 0.5em;
+    }
+
+    .content--title{
+        font-size:0.8rem
+    }
+
+    .content--text{
+        font-size:0.8rem;
+        margin-top: 3em;
+    }
+
+    .btn--header{
+        display: inline-block;
+        padding:10px 20px;
+        font-size:0.6rem;
+        margin-top: 2em;
+        margin-left: 15em;
+    }
+}
+
+@media(max-width:360px){
+    .header{
+        height:30vh;
+        padding: 0px;
+    } 
+
+    .header--badge{
+        width:55%;
+        height: 8vh;
+        margin: 0 auto;
+        padding: 2em;
+        border-left: none;
+    }
+
+    .img--badge{
+        object-fit: contain;
+        height: 5vh;
+        margin-left: 0.5em;
+    }
+
+    .content--title{
+        font-size:0.8rem;
+        /* margin-bottom:0.1em; */
+    }
+
+    .content--text{
+        font-size:0.8rem;
+        margin-top: 1em;
+    }
+
+    .btn--header{
+        display: inline-block;
+        padding:15px 30px;
+        font-weight:bold;
+        font-size:0.8rem;
+        margin-top: 2em;
+        border-radius: 50px;
+        transition: transform 200ms ease-in-out;
+        
+    }
+}
+
+@media(max-width:320px){
+    .img--badge{
+        margin-left: 4em;
+    }
+
+    .content--title{
+        font-size:0.7rem
+    }
+
+    .btn--header{
+        display: inline-block;
+        padding:10px 20px;
+        font-size:0.6rem;
+        margin-left: 12em;
+    }
+}
+
+@media(max-width:540px){
+    .btn--header{
+        display: inline-block;
+        padding:7px 20px;
+        font-size:0.6rem;
+        margin-left: 14em;
+        margin-top: 4em;
     }
 }
