--- a/src/components/Insight.css
+++ b/src/components/Insight.css
@@ -20,3 +20,72 @@
         
     }
 }
+
+@media(max-width:820px){
+    .insight{
+        margin: 0 auto;
+        padding-left: 0.8em;
+        padding-top: 2em;
+        height:15vh;
+        font-size:1.5rem;
+        text-align: center;
+        
+    }
+}
+
+@media(max-width:768px){
+    .insight{
+        width:60%;
+        margin: 0 auto;
+        padding-top: 2em;
+        height:14vh;
+        font-size:1.1rem;
+        text-align: center;
+        
+    } 
+}
+
+@media(max-width:712px){
+    .insight{
+        width:70%;
+        margin: 0 auto;
+        padding-top: 2em;
+        height:14vh;
+        font-size:1.1rem;
+        text-align: center;
+    } 
+}
+
+@media(max-width:540px){
+    .insight{
+        width:70%;
+        padding-top: 1em;
+        margin-bottom: 2em;
+        height:15vh;
+        font-size:0.9rem;
+        text-align: center;
+    }
+}
+
+@media(max-width:414px){
+    .insight{
+        margin: 0 auto;
+        padding-left: 0px;
+        padding-top: 1em;
+        height:20vh;
+        font-size:0.8rem;
+        text-align: center;
+    }  
+}
+
+@media(max-width:375px){
+    .insight{
+        margin: 0 auto;
+        padding-left: 0px;
+        padding-top: 1em;
+        height:20vh;
+        font-size:0.8rem;
+        text-align: center;
+    }
+}
+
