--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,18 @@
 }
 
 
+@media(max-width:912px){
+  .container--row {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content:center;
+    flex-wrap: wrap;
+    width: 100%;
+    margin-bottom: 1em;
+  }
+}
+
 @media(max-width:870px){
   .container--row {
     display: flex;
@@ -15,12 +27,50 @@
     justify-content:center;
     align-content:space-around;
     flex-wrap: wrap;
-    width: 100%;
+    width: 80%;
     padding-right:2em;
-    /* background-color:pink; */
     margin: 0 auto;
    
   }
 }
+
+@media(max-width:820px){
+  .container--row {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content:center;
+    flex-wrap: wrap;
+    width: 100%;
+    margin-top: 2em;
+    margin-bottom: 2em;
+  }
+}
+
+@media(max-width:768px){
+  .container--row {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content:center;
+    flex-wrap: wrap;
+    width: 100%;
+    margin-top: 2em;
+    margin-bottom: 2em;
+  }
+}
+
+@media(max-width:412px){
+  .container--row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:center;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+}
+
+
 
 
