--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -1,4 +1,5 @@
 .banner {
+    /* width:1300px; */
     height:7vh;
     position : relative;
 
@@ -61,6 +62,13 @@
     }
 }
 
+@media(max-width:414px){
+    .banner {
+        height:10vh;
+        font-size: 1.5em;
+    }
+}
+
 @media(max-width:375px){
     .banner {
         height:9vh;
@@ -69,7 +77,7 @@
 
 @media(max-width:360px){
     .banner {
-        height:9vh;
+        height:10vh;
     }
 }
 
