--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,7 +1,7 @@
 .footer{
-    width:device-width;
+    width:100%;
     height:46vh;
-    padding: 1.2em 0 0 10.5em;
+    padding: 1.2em 0 0 0em;
     background-color: rgb(0, 26, 51);;
     color:white;
     display: flex;
@@ -39,47 +39,95 @@
 
 }
 
+@media(max-width:1024px){
+
+    .footer{
+        width:100%;
+        height:35vh;
+    }
+
+    
+    .footer--logo{
+        object-fit: contain;
+        justify-self: flex-start;
+        align-items:center;
+        width: 30%;
+        height:30vh;
+        margin-top: -6em;
+        margin-right: 2em;
+        
+    }
+
+    .footer--text{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        margin-right: 3em;
+        margin-bottom: 3em;
+     }
+
+     .footer--title{
+        margin-top:-5em;
+        margin-right: 3em;
+        margin-bottom: 2em;
+        align-items:flex-start;
+        font-size: 2.5rem;
+    }
+    
+    .footer--description{
+        text-align: center;
+        width:60%;
+        margin-right: 3em;
+    
+    }
+}
+
 
 @media(max-width:912px){
     .footer{
         width:100%;
-        height:45vh;
+        height:40vh;
+        padding: 0em 0 0 0em;
         display: flex;
-        flex-direction:column;
+        flex-direction: row;
         justify-content: center;
-        /* margin-right:7em; */
-        align-items: space-around;
+        align-items: flex-start;
     
         
     }
-
+    
     .footer--logo{
         object-fit: contain;
-        width: 27%;
-        height:15vh;
-        align-self: center;
-        margin-right: 20em;
-        margin-top:2em;
-        margin-bottom: 3em;
+        align-items:flex-start;
+        width: 30%;
+        height:35vh;
+        margin-right: 2em;
         
     }
-
-
+    
     .footer--text{
-        display: flex;
-        align-self: flex-start;
-        margin-right:6em;
-        
-     }
-
-
-    .footer--title{
-        margin-bottom:2em;
+       display: flex;
+       flex-direction: column;
+       justify-content: space-between;
+       align-items: center;
+       width:60%;
+       margin-top: 9em;
+       font-weight: 700;
     }
+    
+    .footer--title{
+        align-items:flex-start;
+        font-size: 3rem;
+        text-align: center;
+    }
+    
+    .footer--description{
+        text-align: center;
+        font-size:1.2em;
+        margin-right: 1em;
 
-     .footer--description{
-        margin-bottom:1.5em;
-     }
+    }
 }
 
 
@@ -130,42 +178,46 @@
     .footer{
         width:100%;
         height:40vh;
+        padding: 0em 0 0 2em;
+        background-color: rgb(0, 26, 51);;
         display: flex;
-        flex-direction:column;
+        flex-direction: row;
         justify-content: center;
-        align-items: space-around;
+        align-items: flex-start;
     
+        
     }
-
+    
     .footer--logo{
         object-fit: contain;
-        width: 15%;
-        height:12vh;
-        align-self: center;
-        margin-right: 20em;
-        margin-top:2em;
-        margin-bottom: 2em;
-    }
-
-    .footer--text{
-        display: flex;
-        justify-content:center;
-        align-self: flex-start;
-        margin-right:0em;
+        align-items:flex-start;
+        width: 30%;
+        height:35vh;
+        margin-right: 2em;
         
-     }
-
-     .footer--title{
-        margin-bottom:1em;
-        margin-left: -0.4em;
     }
-
+    
+    .footer--text{
+       display: flex;
+       flex-direction: column;
+       justify-content: space-between;
+       align-items: center;
+       margin-top: 5em;
+       font-weight: 700;
+    }
+    
+    .footer--title{
+        align-items:flex-start;
+        font-size: 3rem;
+        text-align: center;
+    }
+    
     .footer--description{
-        margin-bottom:1.3em;
-        margin-left: -3em;
-        font-size:1rem;
-     }
-}
+        text-align: center;
+        font-size:1.2em;
+
+    }
+}  
 
 @media(max-width:800px){
     .footer{
@@ -208,23 +260,70 @@
      }
 }
 
+@media(max-width:768px){
+    .footer{
+        width:100%;
+        height:49vh;
+        padding: 0em 0 0 1em;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: flex-start;
+    
+        
+    }
+    
+    .footer--logo{
+        object-fit: contain;
+        align-items:flex-start;
+        /* flex:0.2; */
+        width: 30%;
+        height:35vh;
+        margin-right: 6em;
+        
+    }
+    
+    .footer--text{
+       display: flex;
+       flex-direction: column;
+       justify-content: space-between;
+       align-items: center;
+       margin-top: 5em;
+       font-weight: 700;
+    }
+    
+    .footer--title{
+        align-items:flex-start;
+        font-size: 3rem;
+        text-align: center;
+        margin-right: 2em;
+       
+    }
+    
+    .footer--description{
+        width:60%;
+        text-align: center;
+        font-size:1.5em;
+        margin-right: 2em;
+        margin-bottom: 1em;
+
+    }
+} 
+
 @media(max-width:712px){
     .footer{
-        height:47vh;
+        height:69vh;
         padding: 0em 0 0 0em;
         display: flex;
-
-        /* flex-direction:column; */
         justify-content: space-around;
         align-items: center;
     }
 
     .footer--logo{
         object-fit: contain;
-        width: 20%;
+        width: 35%;
         height:20vh;
         align-self: center;
-        /* justify-content:flex-start; */
         margin-right: 0.2em;
         margin-top:0.1em;
         margin-bottom: 1em;
@@ -235,13 +334,12 @@
         flex-direction: column;
         justify-content:center;
         align-items: center;
-        /* gap:0.8em; */
-     }
+    }
 
      .footer--title{
-        /* margin-top: 0.5em; */
-        margin-bottom:1em;
-        margin-left: 2em;
+        margin-top: -1em;
+        margin-bottom:0em;
+        margin-left: 0.2em;
         font-size:3rem;
     }
 
@@ -250,8 +348,8 @@
         width: 75%;
         margin-top: 2em;
         margin-bottom: 3em;
-        margin-left:10em;
-        font-size:0.9rem;
+        margin-left:4em;
+        font-size:1.5rem;
     }
 }
 
@@ -297,54 +395,52 @@
         font-size: 2em;
     }
     
-    .footer--description{
-       /* display: none; */
-     }
+    
 }
 
 @media(max-width:540px){
     .footer{
-        width:100%;
-        height:47vh;
+        width: 100%;
+        height:100vh;
         padding: 0em 0 0 0em;
+        flex-direction: column;
         display: flex;
-
-        /* flex-direction:column; */
-        justify-content: space-around;
+        justify-content: center;
         align-items: center;
+       
     
-    } 
+    }
 
     .footer--logo{
         object-fit: contain;
-        width: 20%;
-        height:20vh;
+        width: 40%;
+        height:30vh;
         align-self: center;
-        /* justify-content:flex-start; */
-        margin-right: 2em;
-        margin-top:0.9em;
-        margin-bottom: 1em;
+        margin-top:-2em;
+        margin-left: 19em;
     } 
 
     .footer--text{
+        /* width: 60%; */
+        margin-top: 2em;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
-        /* gap:0.8em; */
+        margin-left:6em;
      }
 
      .footer--title{
-        font-size:2em;
-        margin-bottom:0.8em;
-        margin-left: -0.9em;
+        font-size:4em;
+        margin-left: 0.4em;
+        text-align: center;
     }
 
     .footer--description{
-        margin: 0 auto;
-        width: 65%;
-        margin-bottom: 0.8em;
-        font-size:0.8rem;
+        text-align: center;
+        font-size:1.1rem;
+        font-weight: 700;
+        margin-left: 2em;
     }
 
 }
@@ -356,9 +452,7 @@
         margin-left: -0.7em;
         font-size: 1.5em;
     }
-    .footer--description{
-        /* display: none; */
-      }
+
 }
 
 @media(max-width:450px){
@@ -367,109 +461,142 @@
         margin-left: -2.5em;
         font-size: 1.5em;
     }
-    .footer--description{
-        /* display: none; */
-      }
 }
 
 @media(max-width:414px){
     .footer{
-        width:100%;
-        height:47vh;
+        height:90vh;
+        margin-top:1em;
         padding: 0em 0 0 0em;
         display: flex;
-
-        /* flex-direction:column; */
         justify-content: space-around;
         align-items: center;
     
-    } 
+    }
 
     .footer--logo{
         object-fit: contain;
-        width: 20%;
-        height:20vh;
+        width: 60%;
+        height:30vh;
         align-self: center;
-        /* justify-content:flex-start; */
-        margin-right: 0.3em;
-        margin-top:0.1em;
-        margin-bottom: 1em;
+        margin-top:2em;
     } 
 
     .footer--text{
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
-    }
-
-    .footer--title{
-        margin-top: -5em;
-        margin-bottom:0.8em;
-        margin-left: -0.2em;
-    }
-
-    .footer--description{
-        margin: 0 auto;
-        width: 65%;
-        margin-bottom: 0.8em;
-        font-size:0.8rem;
-    }
-}
-
-@media(max-width:375px){
-    .footer{
-        width:100%;
-        height:47vh;
-        padding: 0em 0 0 0em;
-        display: flex;
-
-        /* flex-direction:column; */
-        justify-content: space-around;
-        align-items: center;
-    
-    } 
-
-    .footer--logo{
-        object-fit: contain;
-        width: 20%;
-        height:20vh;
-        align-self: center;
-        /* justify-content:flex-start; */
-        margin-right: 0.6em;
-        margin-top:0.9em;
-        margin-bottom: 1em;
-    } 
-
-    .footer--text{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-        gap:0.8em;
      }
 
      .footer--title{
-        margin-bottom:0.8em;
-        margin-left: -0.9em;
+        font-size:2.5em;
+        margin-right: 2em;
+        text-align: center;
     }
 
     .footer--description{
-        margin: 0 auto;
-        width: 65%;
-        margin-bottom: 0.8em;
-        font-size:0.8rem;
+        text-align: center;
+        font-size:1.1rem;
+        margin-right: 12em;
+        font-weight: 700;
+    }
+}
+
+
+
+
+@media(max-width:411px){
+    .footer{
+        height:97vh;
+        padding: 0em 0 0 0em;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    
+    }
+
+    .footer--logo{
+        object-fit: contain;
+        width: 60%;
+        height:30vh;
+        align-self: center;
+        margin-top:-2em;
+    } 
+
+    .footer--text{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+     }
+
+     .footer--title{
+        font-size:2.5em;
+        margin-top:-2em;
+        margin-right: 5em;
+        text-align: center;
+    }
+
+    .footer--description{
+        text-align: center;
+        font-size:1.1rem;
+        font-weight: 700;
+        margin-right: 11em;
+    }
+}
+
+
+@media(max-width:375px){
+    .footer{
+        height:120vh;
+        margin-top:1em;
+        padding: 0em 0 0 0em;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    
+    }
+
+    .footer--logo{
+        object-fit: contain;
+        width: 70%;
+        height:45vh;
+        align-self: center;
+        margin-top:-2em;
+    } 
+
+    .footer--text{
+        width: 100%;
+        margin-top: 6em;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+     }
+
+     .footer--title{
+        font-size:2.5em;
+        margin-left: 0.4em;
+        text-align: center;
+    }
+
+    .footer--description{
+        text-align: center;
+        font-size:1.1rem;
+        font-weight: 700;
     }
 }
 
 @media(max-width:360px){
 
     .footer{
-        height:47vh;
+        height:120vh;
+        margin-top:1em;
         padding: 0em 0 0 0em;
         display: flex;
-
-        /* flex-direction:column; */
         justify-content: space-around;
         align-items: center;
     
@@ -477,43 +604,40 @@
 
     .footer--logo{
         object-fit: contain;
-        width: 20%;
-        height:20vh;
+        width: 70%;
+        height:45vh;
         align-self: center;
-        /* justify-content:flex-start; */
-        margin-right: 0.2em;
-        margin-top:0.1em;
-        margin-bottom: 6em;
+        margin-top:-2em;
     } 
 
     .footer--text{
+        width: 100%;
+        margin-top: 6em;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
-        gap:0.8em;
      }
 
      .footer--title{
-        margin-bottom:0.8em;
-        margin-left: -0.9em;
+        font-size:2.5em;
+        margin-left: 0.4em;
+        text-align: center;
     }
 
     .footer--description{
-        margin: 0 auto;
-        width: 65%;
-        margin-bottom: 0.8em;
-        font-size:0.8rem;
+        text-align: center;
+        font-size:1.1rem;
+        font-weight: 700;
     }
 }
 
 @media(max-width:280px){
     .footer{
-        height:47vh;
+        height:100vh;
+        margin-top:1em;
         padding: 0em 0 0 0em;
         display: flex;
-
-        /* flex-direction:column; */
         justify-content: space-around;
         align-items: center;
     
@@ -521,34 +645,32 @@
 
     .footer--logo{
         object-fit: contain;
-        width: 20%;
-        height:20vh;
+        width: 60%;
+        height:45vh;
         align-self: center;
-        /* justify-content:flex-start; */
-        margin-right: 0.2em;
-        margin-top:0em;
-        margin-bottom: 9em;
+        /* margin-top:-1em; */
     } 
 
     .footer--text{
+        width: 100%;
+        margin-top: 2em;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
-        /* gap:2em; */
      }
 
      .footer--title{
-        margin-bottom:0.8em;
-        margin-bottom: 0em;
-        margin-left: -0.9em;
+        font-size:2.5em;
+        margin-right: 5em;
+        text-align: center;
     }
 
     .footer--description{
-        margin: 0 auto;
-        width: 65%;
-        margin-top: 0.8em;
-        margin-bottom: 1em;
-        font-size:0.8rem;
+        text-align: center;
+        font-size:1.1rem;
+        font-weight: 700;
+        margin-right: 11em;
+        margin-top:-1em;
     }
 }
