--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -18,7 +18,6 @@
     object-fit: contain;
     height: 10vh;
     margin-left: 11em;
-    /* width: 45%; */
     
 }
 
@@ -53,12 +52,12 @@
 @media(max-width:1024px){
     .header{
         width:100%;
-        height:60vh;
+        height:38vh;
         padding: 0em 0 0 0em;
     }
     
     .header--badge{
-        width:70%;
+        width:57%;
         height: 20vh;
         padding-top: 6em;
         margin-left: 5em;
@@ -66,8 +65,27 @@
         border-left: 6px solid #ffff00;
     }
 
+    .img--badge{
+        object-fit: contain;
+        height: 15vh;
+        margin-top: -2em;
+        margin-left: 11em;
+        
+    }
+
     .content--text{
-        font-size:1rem
+        font-size:0.8rem;
+        margin-left:1em;
+    }
+
+    .content--title{
+        font-size:2.5rem;
+        text-align: center;
+        margin-bottom: 0.2em;
+    }
+
+    .content--text{
+        /* font-size:1rem */
     }
 
     .btn--header{
@@ -86,34 +104,52 @@
 @media(max-width:912px){
     .header{
         width:100%;
-        height:40vh;
+        height:30vh;
         padding: 0em 0 0 0em;
+        background-color: rgb(4, 30, 55);
     }
-    
+
     .header--badge{
-        background-color:rgb(10, 34, 59);
         width:70%;
-        height: 20vh;
-        padding-top: 6em;
-        margin-left: 5em;
-        padding-left: 2em;
-        border-left: 6px solid #ffff00;
+        height: 11vh;
+        border-bottom: none;
+        border-left: 9px solid #ffff00;
+        
+    }
+
+    .img--badge{
+        object-fit: contain;
+        height: 7vh;
+        margin-top: -3em;
+        margin-left: 14em;
+        margin-bottom:0.6em;
+    }
+
+    .header--content{
+        display: flex;
+        flex-direction:column;
+        
+    }
+
+    .content--title{
+        font-size:2.5rem;
+        text-align: center;
+        margin-bottom: 0.2em;
     }
 
     .content--text{
-        font-size:1rem
+        font-size:1rem;
+        margin-top: 1em;
+        font-weight: 700;
+        margin-left: 3em;
     }
 
     .btn--header{
         display: inline-block;
-        padding:20px 40px;
-        font-weight:bold;
-        font-size:1rem;
-        margin-top: 2em;
-        margin-left:6em;
-        border-radius: 50px;
-        transition: transform 200ms ease-in-out;
-        
+        padding:15px 40px;
+        font-size:0.9rem;
+        margin-left: 5em;
+        margin-top: 1em;
     }
 }
 
@@ -173,66 +209,109 @@
     }
 }
 
-/* @media(max-width:870px){
-    .header{
-        width: 100%;
-        height:27vh;
-        padding: 2em 0em 0em 12.5em;
-    }
-} */
 
 @media(max-width:820px){
     .header{
-        height:25vh;
-        padding: 0px;
+        width:100%;
+        height:30vh;
+        padding: 0em 0 0 0em;
+        background-color: rgb(4, 30, 55);
     }
 
     .header--badge{
-        width:55%;
-        height: 8vh;
-        margin: 0 auto;
-        padding: 2em;
-        border-left: none;
+        width:70%;
+        height: 11vh;
+        border-bottom: none;
+        border-left: 9px solid #ffff00;
+        
     }
 
     .img--badge{
         object-fit: contain;
-        height: 5vh;
-        margin-left: 12em;
+        height: 7vh;
+        margin-top: -3em;
+        margin-left: 14em;
+        margin-bottom:0.6em;
+    }
+
+    .header--content{
+        display: flex;
+        flex-direction:column;
+        
     }
 
     .content--title{
-        font-size:1.5rem;
+        font-size:2.5rem;
         text-align: center;
+        margin-bottom: 0.2em;
     }
 
     .content--text{
         font-size:1rem;
-        margin-top: 3em;
+        margin-top: 1em;
+        font-weight: 700;
+        margin-left: -30em;
     }
 
     .btn--header{
         display: inline-block;
-        padding:18px 30px;
+        padding:15px 40px;
         font-size:0.9rem;
-        margin-left: 24em;
-        margin-top: 4em;
+        margin-left: 5em;
+        margin-top: 1em;
     }
 }
 
 @media(max-width:768px){
 
     .header{
+        width:100%;
         height:30vh;
-        padding: 0px;
+        padding: 0em 0 0 0em;
+        background-color: rgb(4, 30, 55);
+    }
+
+    .header--badge{
+        width:70%;
+        height: 11vh;
+        border-bottom: none;
+        border-left: 9px solid #ffff00;
+        
+    }
+
+    .img--badge{
+        object-fit: contain;
+        height: 7vh;
+        margin-top: -3em;
+        margin-left: 14em;
+        margin-bottom:0.6em;
+    }
+
+    .header--content{
+        display: flex;
+        flex-direction:column;
+        
+    }
+
+    .content--title{
+        font-size:2.5rem;
+        text-align: center;
+        margin-bottom: 0.2em;
+    }
+
+    .content--text{
+        font-size:1rem;
+        margin-top: 1em;
+        font-weight: 700;
+        margin-left: -30em;
     }
 
     .btn--header{
         display: inline-block;
-        padding:18px 30px;
+        padding:15px 40px;
         font-size:0.9rem;
-        margin-left: 22em;
-        margin-top: 4em;
+        margin-left: 5em;
+        margin-top: 1em;
     }
 }
 
@@ -244,74 +323,96 @@
     }
 
     .header--badge{
-        width:55%;
-        height: 12vh;
+        width:68%;
+        height: 13vh;
         margin: 0 auto;
         padding: 2em;
         border-left: none;
+        border-bottom: 10px solid #ffff00;
     }
 
     .img--badge{
         object-fit: contain;
-        height: 5vh;
-        margin-left: 10em;
+        height: 7vh;
+        margin-left: 12em;
+    }
+
+    .header--content{
+        display: flex;
+        flex-direction:column;
+        gap:0.1em;
+    }
+
+    .content--title{
+        font-size:2em;
     }
 
     .content--text{
         font-size:1em;
-        margin-top:2.7em;
+        margin-top:-0.1em;
+        font-weight: 700;
     }
 
     .btn--header{
         display: inline-block;
-        padding:15px 30px;
+        padding:15px 45px;
         font-weight:bold;
-        font-size:0.8rem;
+        font-size:0.9rem;
         margin-top: 3em;
-        margin-left: 23em;
+        margin-left: 20em;
         border-radius: 50px;
         transition: transform 200ms ease-in-out;
         
     }
 }
 
+
 @media(max-width:540px){
 
     .header{
-        width:100%;
-        height:30vh;
-        padding: 0em 0 0 0em;
-     
-    }
+        height:48vh;
+        padding: 0px;
+    } 
+
     .header--badge{
-        width:55%;
-        height: 8vh;
-        margin-left: 4em;
+        width:75%;
+        height: 20vh;
+        margin: 0 auto;
         padding: 2em;
         border-left: none;
+        border-bottom: 10px solid #ffff00;
     }
 
     .img--badge{
         object-fit: contain;
-        height: 5vh;
-        margin-left: 0.4em;
+        height: 12vh;
+        margin-left: 10em;
+        margin-top: 0.1em;
+    }
+
+    .header--content{
+        display: flex;
+        justify-content:center;
+        align-items:center;
     }
 
     .content--title{
-        font-size:0.9rem;
+        font-size:1.7rem;
     }
 
     .content--text{
-        font-size:0.8em;
-        margin-top:3em;
+        font-size:0.8rem;
+        margin-left: 1em;
+        font-weight: 700;
     }
 
     .btn--header{
-        display: inline-block;
-        padding:10px 20px;
-        font-size:0.6rem;
-        margin-top: 4em;
-        margin-left: 20em;
+        padding:15px 40px;
+        font-size:0.7rem;
+        border-radius: 50px;
+        font-weight: 200;
+        margin-right: 2em;
+        
     }
 }
 
@@ -346,26 +447,88 @@
 } */
 
 @media(max-width:414px){
+    .header{
+        height:48vh;
+        padding: 0px;
+    } 
+
     .header--badge{
-        width:55%;
-        height: 8vh;
+        width:70%;
+        height: 25vh;
         margin: 0 auto;
         padding: 2em;
         border-left: none;
+        border-bottom: 10px solid #ffff00;
     }
 
     .img--badge{
         object-fit: contain;
-        height: 5vh;
-        margin-left: 0.4em;
+        height: 12vh;
+        margin-left: 5em;
+    }
+
+    .content--title{
+        font-size:2rem;
+    }
+
+    .content--text{
+        font-size:0.8rem;
+        margin-top: 1em;
+        font-weight: 700;
     }
 
     .btn--header{
         display: inline-block;
-        padding:10px 20px;
-        font-size:0.6rem;
-        margin-top: 3em;
-        margin-left: 17em;
+        padding:15px 47px;
+        font-size:0.8rem;
+        border-radius: 50px;
+        font-weight: 200;
+        /* margin-top: -0.01em; */
+        margin-left: 10em;
+        transition: transform 200ms ease-in-out;
+        
+    }
+}
+
+@media(max-width:411px){
+    .header{
+        height:50vh;
+        padding: 0px;
+    } 
+
+    .header--badge{
+        width:70%;
+        height: 25vh;
+        margin: 0 auto;
+        padding: 2em;
+        border-left: none;
+        border-bottom: 10px solid #ffff00;
+    }
+
+    .img--badge{
+        object-fit: contain;
+        height: 12vh;
+        margin-left: 5em;
+    }
+
+    .content--title{
+        font-size:2rem;
+    }
+
+    .content--text{
+        font-size:0.8rem;
+        font-weight: 700;
+    }
+
+    .btn--header{
+        display: inline-block;
+        padding:15px 47px;
+        font-size:0.8rem;
+        border-radius: 50px;
+        font-weight: 200;
+        margin-left: 10em;
+        transition: transform 200ms ease-in-out;
+        
     }
 }
 
@@ -401,107 +564,169 @@
 
 @media(max-width:375px){
     .header{
-        height:30vh;
+        height:56vh;
         padding: 0px;
     } 
 
     .header--badge{
-        width:55%;
-        height: 8vh;
+        width:70%;
+        height: 28vh;
         margin: 0 auto;
         padding: 2em;
         border-left: none;
+        border-bottom: 10px solid #ffff00;
     }
 
     .img--badge{
         object-fit: contain;
-        height: 5vh;
-        margin-left: 0.5em;
+        height: 12vh;
+        margin-left: 5em;
     }
 
     .content--title{
-        font-size:0.8rem
-    }
-
-    .content--text{
-        font-size:0.8rem;
-        margin-top: 3em;
-    }
-
-    .btn--header{
-        display: inline-block;
-        padding:10px 20px;
-        font-size:0.6rem;
-        margin-top: 2em;
-        margin-left: 15em;
-    }
-}
-
-@media(max-width:360px){
-    .header{
-        height:30vh;
-        padding: 0px;
-    } 
-
-    .header--badge{
-        width:55%;
-        height: 8vh;
-        margin: 0 auto;
-        padding: 2em;
-        border-left: none;
-    }
-
-    .img--badge{
-        object-fit: contain;
-        height: 5vh;
-        margin-left: 0.5em;
-    }
-
-    .content--title{
-        font-size:0.8rem;
-        /* margin-bottom:0.1em; */
+        font-size:2rem;
     }
 
     .content--text{
         font-size:0.8rem;
         margin-top: 1em;
+        font-weight: 700;
     }
 
     .btn--header{
         display: inline-block;
-        padding:15px 30px;
-        font-weight:bold;
+        padding:15px 44px;
         font-size:0.8rem;
-        margin-top: 2em;
+        margin-left: 8.5em;
         border-radius: 50px;
+        font-weight: 200;
+        transition: transform 200ms ease-in-out;
+        
+    }
+}
+
+@media(max-width:360px){
+    .header{
+        height:56vh;
+        padding: 0px;
+    } 
+
+    .header--badge{
+        width:70%;
+        height: 28vh;
+        margin: 0 auto;
+        padding: 2em;
+        border-left: none;
+        border-bottom: 10px solid #ffff00;
+    }
+
+    .img--badge{
+        object-fit: contain;
+        height: 12vh;
+        margin-left: 5em;
+    }
+
+    .content--title{
+        font-size:2rem;
+    }
+
+    .content--text{
+        font-size:0.8rem;
+        margin-top: 1em;
+        font-weight: 700;
+    }
+
+    .btn--header{
+        display: inline-block;
+        padding:15px 40px;
+        font-size:0.8rem;
+        border-radius: 50px;
+        font-weight: 200;
         transition: transform 200ms ease-in-out;
         
     }
 }
 
 @media(max-width:320px){
+    .header{
+        width:100%;
+        height:56vh;
+        padding: 0px;
+    } 
+
+    .header--badge{
+        width:70%;
+        height: 28vh;
+        margin: 0 auto;
+        padding: 2em;
+        border-left: none;
+        border-bottom: 10px solid #ffff00;
+    }
+
     .img--badge{
-        margin-left: 4em;
+        object-fit: contain;
+        height: 12vh;
+        margin-left: 5em;
     }
 
     .content--title{
-        font-size:0.7rem
+        font-size:1.8rem;
+    }
+
+    .content--text{
+        font-size:0.8rem;
+        margin-top: 1em;
+        font-weight: 700;
     }
 
     .btn--header{
         display: inline-block;
-        padding:10px 20px;
-        font-size:0.6rem;
-        margin-left: 12em;
+        padding:15px 37px;
+        font-size:0.9rem;
+        margin-left: 7em;
+        margin-top: 2em;
     }
 }
 
-@media(max-width:540px){
+
+@media(max-width:280px){
+    .header{
+        width:100%;
+        height:52vh;
+        padding: 0px;
+    } 
+
+    .header--badge{
+        width:70%;
+        height: 25vh;
+        margin: 0 auto;
+        padding: 2em;
+        border-left: none;
+        border-bottom: 10px solid #ffff00;
+    }
+
+    .img--badge{
+        object-fit: contain;
+        height: 12vh;
+        margin-left: 3em;
+    }
+
+    .content--title{
+        font-size:1.8rem;
+    }
+
+    .content--text{
+        font-size:0.8rem;
+        margin-top: 1em;
+        font-weight: 700;
+    }
+
     .btn--header{
         display: inline-block;
-        padding:7px 20px;
-        font-size:0.6rem;
-        margin-left: 14em;
-        margin-top: 4em;
+        padding:15px 37px;
+        font-size:0.9rem;
+        margin-left: 5em;
+        margin-top: 2em;
     }
 }
+
