--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,44 @@
+.container{
+  width: 100%;
+}
+
+.layout--header{
+  width: 100%;
+  background-color: rgb(4, 30, 55);
+}
+
+.layout--banner{
+  width: 100%;
+}
+
+.layout--footer{
+  width: 100%;
+  background-color: rgb(4, 30, 55);
+}
+
+.layout--footer--date{
+  width: 100%;
+  background-color:#ffff00;
+}
+
+/* .container--row1{
+  width: 80%;
+} */
+
+.layout--footer{
+  width: 100%;
+}
+
+.layout--footer--date{
+  width: 100%;
+ 
+}
+
 .container--row {
-  /* background-color:pink; */
-  display: flex;
-  flex-wrap: wrap;
   width: 80%;
   margin: 0 auto;
- 
+  display: flex;
+  flex-wrap: wrap;
 }
 
 
