--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,6 @@
 .footer{
-    width:100%;
+    width:80%;
+    margin:0 auto;
     height:46vh;
     padding: 1.2em 0 0 0em;
     background-color: rgb(0, 26, 51);;
@@ -43,7 +44,7 @@
 
     .footer{
         width:100%;
-        height:35vh;
+        height:45vh;
     }
 
 
@@ -53,7 +54,7 @@
         align-items:center;
         width: 30%;
         height:30vh;
-        margin-top: -6em;
+        margin-top: -3em;
         margin-right: 2em;
         
     }
@@ -68,7 +69,7 @@
      }
 
      .footer--title{
-        margin-top:-5em;
+        margin-top:-0.6em;
         margin-right: 3em;
         margin-bottom: 2em;
         align-items:flex-start;
@@ -109,15 +110,15 @@
     .footer--text{
        display: flex;
        flex-direction: column;
-       justify-content: space-between;
+       justify-content: flex-end;
        align-items: center;
        width:60%;
-       margin-top: 9em;
-       font-weight: 700;
+       margin-top: 17em;
+       /* font-weight: 700; */
     }
     
     .footer--title{
-        align-items:flex-start;
+        justify-self:flex-end;
         font-size: 3rem;
         text-align: center;
     }
@@ -125,7 +126,7 @@
     .footer--description{
         text-align: center;
         font-size:1.2em;
-        margin-right: 1em;
+        margin-right: 4em;
 
     }
 }
@@ -264,7 +265,7 @@
 @media(max-width:768px){
     .footer{
         width:100%;
-        height:49vh;
+        height:55vh;
         padding: 0em 0 0 1em;
         display: flex;
         flex-direction: row;
@@ -313,7 +314,7 @@
 
 @media(max-width:712px){
     .footer{
-        height:69vh;
+        height:57vh;
         padding: 0em 0 0 0em;
         display: flex;
         justify-content: space-around;
@@ -324,6 +325,7 @@
         object-fit: contain;
         width: 35%;
         height:20vh;
+        padding-left: 4em;
         align-self: center;
         margin-right: 0.2em;
         margin-top:0.1em;
@@ -331,10 +333,12 @@
     } 
 
     .footer--text{
+        width:60%;
         display: flex;
         flex-direction: column;
         justify-content:center;
         align-items: center;
+       
     }
 
      .footer--title{
@@ -348,8 +352,8 @@
         margin: 0 auto;
         width: 75%;
         margin-top: 2em;
-        margin-bottom: 3em;
-        margin-left:4em;
+        margin-bottom: 1em;
+        margin-left:2em;
         font-size:1.5rem;
     }
 }
@@ -402,7 +406,7 @@
 @media(max-width:540px){
     .footer{
         width: 100%;
-        height:100vh;
+        height:80vh;
         padding: 0em 0 0 0em;
         flex-direction: column;
         display: flex;
@@ -414,26 +418,26 @@
 
     .footer--logo{
         object-fit: contain;
-        width: 40%;
-        height:30vh;
+        width: 35%;
+        height:26vh;
         align-self: center;
-        margin-top:-2em;
+        margin-top:3em;
         margin-left: 19em;
     } 
 
     .footer--text{
-        /* width: 60%; */
+       
         margin-top: 2em;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
-        margin-left:6em;
+        margin-left:8em;
      }
 
      .footer--title{
         font-size:4em;
-        margin-left: 0.4em;
+        margin-left: 3em;
         text-align: center;
     }
 
@@ -605,15 +609,16 @@
 
     .footer--logo{
         object-fit: contain;
-        width: 70%;
+        width: 65%;
         height:45vh;
         align-self: center;
         margin-top:-2em;
+        margin-right: 22em;
     } 
 
     .footer--text{
         width: 100%;
-        margin-top: 6em;
+        margin-top: 3em;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -621,15 +626,17 @@
      }
 
      .footer--title{
-        font-size:2.5em;
-        margin-left: 0.4em;
+        font-size:2em;
         text-align: center;
+        margin-left: -9em;
+        margin-right: -1em;
     }
 
     .footer--description{
         text-align: center;
         font-size:1.1rem;
         font-weight: 700;
+        margin-left: -4em;
     }
 }
 
@@ -649,22 +656,26 @@
         width: 60%;
         height:45vh;
         align-self: center;
+        margin-top:2em;
+        margin-left: 15em;
         /* margin-top:-1em; */
     } 
 
     .footer--text{
-        width: 100%;
-        margin-top: 2em;
+        width: 70%;
+        margin-top: 4em;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
+        margin-right: 17em;
      }
 
      .footer--title{
         font-size:2.5em;
         margin-right: 5em;
         text-align: center;
+       
     }
 
     .footer--description{
