--- a/src/components/FooterDate.css
+++ b/src/components/FooterDate.css
@@ -1,8 +1,8 @@
 .footer--date{
-    background-color:#ffff00;
+    width:80%;
+    margin: 0 auto;
     text-align: center;
     padding-top: 2em;
-    width:100%;
     height:5vh;
 }
 
