--- a/src/components/Row.css
+++ b/src/components/Row.css
@@ -68,8 +68,8 @@
         flex-wrap: wrap;
         gap: 0.1em;;
         width:25%;
-        height: 25vh;
-        margin-top: -1em;
+        height: 55vh;
+        /* margin-top: -1em; */
     }
 
     .row--poster{
@@ -301,6 +301,7 @@
         justify-content: space-evenly;
         align-items: center;
         flex-wrap: wrap;
+        margin-bottom: 3em;
         height: 34vh; 
     }
     .logo--img{
@@ -558,6 +559,7 @@
         flex:0.3;
         margin-top: -1em;
         margin-bottom: 2em;
+      
     }
 
     .row--btn{
