--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
-  max-width:1455px;
+  /* max-width:1455px; */
 }
 
 code {
